syntax="proto3";
package chat;

option go_package = "client-stream-modes/proto";

service ChatService {
    rpc SendClientStream(stream HelloRequest) returns (HelloResponse) {};
}

message HelloRequest {
    string RequestString = 1;
}

message HelloResponse {
    string ResponseString = 1;
}
